--- a/number-guessing/src/style.css
+++ b/number-guessing/src/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: Aharoni, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -10,4 +10,31 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+button {
+  margin-top: 0.5rem;
+  padding: 0.5rem 1rem;
+  font-size: 1.2rem;
+  background-color: #c60000;
+  color: #fff;
+  border: none;
+  border-radius: 0.99rem;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+
+h1 {
+  margin-top: 0;
+}
+
+body {
+  font-family: sans-serif;
+  text-align: center;
+}
+
+input {
+  padding: 0.5rem;
+  font-size: 1.2rem;
+
 }
